--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,12 +29,13 @@
    <img class="dropbtn" src="http://digitalspyuk.cdnds.net/17/25/320x320/square-1498216547-avatar-neytiri.jpg">
    <div class="dropdown-content">
     <% unless user_signed_in? %>
-     <%= link_to "Log in", new_user_session_path %>
-     <%= link_to "Sign up", new_user_registration_path %>
+     <%= link_to "Log in", new_user_session_path, data: {toggle: 'modal', target: '#myModal'} %>
+     <%= link_to "Sign up", new_user_registration_path, data: {toggle: 'modal', target: '#myModal'} %>
     <% else %>
      <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-    <% end %>
      <%= link_to "New task", new_task_path %>
+    <% end %>
+
    </div>
   </div>
 </nav>
