--- a/app/views/email/_show.html.erb
+++ b/app/views/email/_show.html.erb
@@ -1,1 +1,3 @@
-<%= @email.body %>
+<h2><%= @email.object %></h2>
+<p><%= @email.body %></p>
+<button><%= link_to 'Supprimer', email_delete_path(:id => @email.id), method: :delete, data: { confirm: "En es-tu sûr ?"}, :remote => true %></button>
