--- a/app/assets/stylesheets/components/email.scss
+++ b/app/assets/stylesheets/components/email.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the email controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.unread
+{
+  font-weight: bold;
+  text-decoration: none !important;
+}
+
+.read
+{
+  text-decoration: none !important;
+}
+
+#body_email
+{
+  padding-top: 20px;
+}
