--- a/app/views/email/index.html.erb
+++ b/app/views/email/index.html.erb
@@ -3,16 +3,22 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <table class="table">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th scope="row">Emails reçus</th>
           </tr>
         </thead>
         <% @email.each do |mail| %>
+        <% if mail.read == false %>
         <tr>
-          <td><%= link_to mail.object, email_show_path(:id => mail.id), :remote => true %></td>
+          <td><%= link_to mail.object, email_show_path(:id => mail.id), :class => 'unread', :remote => true %></td>
         </tr>
+        <% else %>
+        <tr>
+          <td><%= link_to mail.object, email_show_path(:id => mail.id), :class => 'read', :remote => true %></td>
+        </tr>
+        <% end %>
         <% end %>
       </table>
     </div>
