--- a/app/views/email/show.js.erb
+++ b/app/views/email/show.js.erb
@@ -1,1 +1,6 @@
-$("#body_email").html("<%= j render 'show' %>");
+$(document).ready(function(){
+  function renderPage() {
+    $("#body_email").html("<%= j render 'show' %>");
+  };
+  renderPage();
+});
