--- a/app/views/email/show.js.erb
+++ b/app/views/email/show.js.erb
@@ -1,6 +1,9 @@
+console.log('ok')
+
 $(document).ready(function(){
-  function renderPage() {
+
     $("#body_email").html("<%= j render 'show' %>");
-  };
-  renderPage();
+
 });
+
+console.log('putain de merde')
