--- a/app/assets/stylesheets/components/_email.scss
+++ b/app/assets/stylesheets/components/_email.scss
@@ -16,3 +16,20 @@
 {
   padding-top: 20px;
 }
+
+.delete-link
+{
+  color: white;
+  text-decoration: none;
+}
+
+.delete-link:hover
+{
+  text-decoration: none;
+  color: white;
+}
+ h1
+ {
+   padding: 10px;
+   border: 1px solid;
+ }
