--- a/app/views/email/index.html.erb
+++ b/app/views/email/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center text-info"> Boîte de réception </h1>
+<h1 class="text-center text-info">📩 Boîte de réception 📩</h1>
 
 <div class="container">
   <div class="row">
@@ -7,6 +7,7 @@
         <thead>
           <tr>
             <th scope="row">Emails reçus</th>
+            <th scope="row">Date de réception</th>
           </tr>
         </thead>
         <% @email.each do |mail| %>
